logs/eth-testrpc.log
Listing '.'...
Listing './bin'...
Listing './bitcoin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Crypto'...
Listing './lib/python3.5/site-packages/Crypto/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/Hash'...
Listing './lib/python3.5/site-packages/Crypto/IO'...
Listing './lib/python3.5/site-packages/Crypto/Math'...
Listing './lib/python3.5/site-packages/Crypto/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Crypto/Signature'...
Listing './lib/python3.5/site-packages/Crypto/Util'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/bitcoin'...
Listing './lib/python3.5/site-packages/bitcoin-1.1.42.egg-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/eth_testrpc-1.3.3.dist-info'...
Listing './lib/python3.5/site-packages/ethereum'...
Compiling './lib/python3.5/site-packages/ethereum/snapshot.py'...
***   File "./lib/python3.5/site-packages/ethereum/snapshot.py", line 77
    print "[%d] created account snapshot %s" % (count, encode_hex(addr))
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ethereum/tests'...
Listing './lib/python3.5/site-packages/ethereum-1.6.1.egg-info'...
Listing './lib/python3.5/site-packages/json_rpc-1.10.8.dist-info'...
Listing './lib/python3.5/site-packages/jsonrpc'...
Listing './lib/python3.5/site-packages/jsonrpc/backend'...
Listing './lib/python3.5/site-packages/jsonrpc/tests'...
Listing './lib/python3.5/site-packages/jsonrpc/tests/test_backend_django'...
Listing './lib/python3.5/site-packages/jsonrpc/tests/test_backend_flask'...
Listing './lib/python3.5/site-packages/pbkdf2-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pycryptodome-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/pyethash-0.1.27.egg-info'...
Listing './lib/python3.5/site-packages/pysha3-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/rlp'...
Listing './lib/python3.5/site-packages/rlp/sedes'...
Listing './lib/python3.5/site-packages/rlp-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/scrypt-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/secp256k1'...
Listing './lib/python3.5/site-packages/secp256k1-0.13.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/testrpc'...
Listing './lib/python3.5/site-packages/testrpc/client'...
Listing './lib/python3.5/site-packages/testrpc/compat'...
Listing './lib/python3.5/site-packages/tools'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
